--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "144c373b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "import IPython\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from getdist import loadMCSamples,MCSamples, plots\n",
+    "from getdist import loadMCSamples,MCSamples, plots,types\n",
     "import numpy as np\n",
     "import getdist_chainplot_utils as gdu"
    ]
@@ -347,8 +347,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "85ef9ac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param =[\"cosmological_parameters--omega_m\",\"cosmological_parameters--h0\",\"cosmological_parameters--omega_b\",\"cosmological_parameters--ommh2\",\"cosmological_parameters--ombh2\",\"summnu\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "951b6de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean = [0.3322682  0.67888592 0.0451242  0.15295807 0.02139499 0.37350713], err = [0.03104549 0.07476852 0.00914813 0.02680182 0.00749586 0.15414316]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('mean = %s, err = %s'%(test_chain.mean(param), test_chain.std(param)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "63bcede2",
+   "id": "b2d17cff",
    "metadata": {},
    "outputs": [],
    "source": []
