--- a/test.ipynb
+++ b/test.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 130,
    "id": "85ef9ac6",
    "metadata": {},
    "outputs": [],
@@ -357,26 +357,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "951b6de3",
+   "execution_count": 133,
+   "id": "0d5c33df",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean = [0.3322682  0.67888592 0.0451242  0.15295807 0.02139499 0.37350713], err = [0.03104549 0.07476852 0.00914813 0.02680182 0.00749586 0.15414316]\n"
+      "cosmological_parameters--omega_m 0.3322681959638577 0.1 0.9\n",
+      "cosmological_parameters--h0 0.6788859161701581 0.55 0.91\n",
+      "cosmological_parameters--ommh2 0.15295806984893784 None None\n",
+      "cosmological_parameters--ombh2 0.021394988591310653 0.005 0.04\n",
+      "summnu 0.37350713236056216 0.055883999999999996 0.5998216000000001\n"
      ]
     }
    ],
    "source": [
-    "print('mean = %s, err = %s'%(test_chain.mean(param), test_chain.std(param)))"
+    "print(param[0],test_chain.mean(param[0]),test_chain.getLower(param[0]),test_chain.getUpper(param[0]))\n",
+    "print(param[1],test_chain.mean(param[1]),test_chain.getLower(param[1]),test_chain.getUpper(param[1]))\n",
+    "print(param[3],test_chain.mean(param[3]),test_chain.getLower(param[3]),test_chain.getUpper(param[3]))\n",
+    "print(param[4],test_chain.mean(param[4]),test_chain.getLower(param[4]),test_chain.getUpper(param[4]))\n",
+    "print(param[5],test_chain.mean(param[5]),test_chain.getLower(param[5]),test_chain.getUpper(param[5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "443f70c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using 14018 rows, 53 parameters; mean weight 7.133685261808369e-05, tot weight 1.000000000000297\n",
+      "Equiv number of single samples (sum w)/max(w): 3966\n",
+      "Effective number of weighted samples (sum w)^2/sum(w^2): 5780\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_chain.getNumSampleSummaryText())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "7872edc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marginalized limits: 0.68; 0.95; 0.99\n",
+      "\n",
+      "parameter                                mean           sddev          lower1         upper1         limit1 lower2         upper2         limit2 lower3         upper3         limit3 \n",
+      "cosmological_parameters--omega_m         3.3226820E-01  3.1045492E-02  2.9920809E-01  3.6063668E-01  two    2.7291533E-01  3.9421205E-01  two    2.6153285E-01  4.1893784E-01  two     \\Omega_{\\rm m}\n",
+      "cosmological_parameters--h0              6.7888592E-01  7.4768523E-02  5.7676786E-01  7.3434297E-01  two    5.5000000E-01  8.1296409E-01  >      5.5000000E-01  8.5464658E-01  >       h\n",
+      "cosmological_parameters--omega_b         4.5124203E-02  9.1481336E-03  3.1470745E-02  5.0814694E-02  two    3.0000000E-02  6.1281937E-02  >      3.0000000E-02  7.0000000E-02  none    \\Omega_b\n",
+      "cosmological_parameters--n_s             9.5345759E-01  5.1460242E-02  8.7000000E-01  9.7854098E-01  >      8.7000000E-01  1.0700000E+00  none   8.7000000E-01  1.0700000E+00  none    n_s\n",
+      "cosmological_parameters--a_s             1.9344010E-09  2.8400244E-10  1.6124458E-09  2.1641042E-09  two    1.4202984E-09  2.5064399E-09  two    1.3083956E-09  2.7630774E-09  two     A_s\n",
+      "cosmological_parameters--omnuh2          4.0101689E-03  1.6549620E-03  3.1977956E-03  6.4400000E-03  <      6.0000000E-04  6.4400000E-03  none   6.0000000E-04  6.4400000E-03  none    \\Omega_{\\nu}h^2\n",
+      "shear_calibration_parameters--m1        -6.2396876E-03  8.9995423E-03 -1.5424104E-02  2.8494567E-03  two   -2.3347620E-02  1.1573621E-02  two   -2.9321833E-02  1.6779041E-02  two     m_1\n",
+      "shear_calibration_parameters--m2        -2.0586994E-02  7.6214223E-03 -2.7954699E-02 -1.3259297E-02  two   -3.5541225E-02 -5.2535107E-03  two   -4.0615660E-02 -1.8850592E-04  two     m_2\n",
+      "shear_calibration_parameters--m3        -2.3876564E-02  7.3134213E-03 -3.1227187E-02 -1.6587756E-02  two   -3.8331470E-02 -9.7384463E-03  two   -4.2906038E-02 -5.0732847E-03  two     m_3\n",
+      "shear_calibration_parameters--m4        -3.6456761E-02  7.2657796E-03 -4.3709482E-02 -2.9300402E-02  two   -5.0643591E-02 -2.1942993E-02  two   -5.4533522E-02 -1.7630782E-02  two     m_4\n",
+      "wl_photoz_errors--bias_1                 5.1246281E-03  1.5437726E-02 -1.1050304E-02  2.0152670E-02  two   -2.3953374E-02  3.4914542E-02  two   -3.2396614E-02  4.4701250E-02  two     \\Delta z_{s}^1\n",
+      "wl_photoz_errors--bias_2                -1.6366356E-02  9.0365580E-03 -2.5086798E-02 -7.1569334E-03  two   -3.5144081E-02  1.6276511E-03  two   -3.9339183E-02  7.5890633E-03  two     \\Delta z_{s}^2\n",
+      "wl_photoz_errors--bias_3                -1.8181530E-02  8.1285506E-03 -2.6192165E-02 -1.0052176E-02  two   -3.3979338E-02 -1.7783439E-03  two   -3.8634318E-02  2.3044716E-03  two     \\Delta z_{s}^3\n",
+      "wl_photoz_errors--bias_4                 4.3917412E-03  1.3290349E-02 -8.9061260E-03  1.7667154E-02  two   -2.0837656E-02  3.0198890E-02  two   -2.9475151E-02  3.8871738E-02  two     \\Delta z_{s}^4\n",
+      "lens_photoz_errors--bias_1              -7.1982568E-03  5.5651928E-03 -1.2640204E-02 -1.6746696E-03  two   -1.7978947E-02  3.8111725E-03  two   -2.1689344E-02  7.3139928E-03  two     \\Delta z_{l}^1\n",
+      "lens_photoz_errors--bias_2              -2.2992746E-02  8.9533621E-03 -3.1991037E-02 -1.3964360E-02  two   -4.0206478E-02 -5.1696541E-03  two   -4.4793915E-02 -4.7363665E-04  two     \\Delta z_{l}^2\n",
+      "lens_photoz_errors--bias_3              -2.4448985E-03  5.5141267E-03 -7.9163069E-03  3.1280160E-03  two   -1.3189025E-02  8.2753314E-03  two   -1.6810908E-02  1.2113198E-02  two     \\Delta z_{l}^3\n",
+      "lens_photoz_errors--bias_4              -6.2506655E-03  5.6965927E-03 -1.1818741E-02 -5.8132713E-04  two   -1.7674194E-02  4.7597089E-03  two   -2.1112311E-02  8.2364685E-03  two     \\Delta z_{l}^4\n",
+      "lens_photoz_errors--width_1              9.7352543E-01  4.4371156E-02  9.2927944E-01  1.0164031E+00  two    8.8745571E-01  1.0629858E+00  two    8.6275409E-01  1.0895077E+00  two     W_{l}^1\n",
+      "lens_photoz_errors--width_2              1.1567895E+00  7.3902042E-02  1.0830004E+00  1.2293995E+00  two    1.0151065E+00  1.3097153E+00  two    9.6867323E-01  1.3482259E+00  two     W_{l}^2\n",
+      "lens_photoz_errors--width_3              9.0837923E-01  4.7045942E-02  8.6138436E-01  9.5594044E-01  two    8.1793533E-01  1.0004061E+00  two    7.8841381E-01  1.0245683E+00  two     W_{l}^3\n",
+      "lens_photoz_errors--width_4              9.2183210E-01  4.6174561E-02  8.7669363E-01  9.6639754E-01  two    8.3076617E-01  1.0126978E+00  two    7.9973610E-01  1.0376027E+00  two     W_{l}^4\n",
+      "bias_lens--b1                            1.4619485E+00  9.5714794E-02  1.3665356E+00  1.5564331E+00  two    1.2801449E+00  1.6552447E+00  two    1.2331131E+00  1.7204647E+00  two     b^{[1]}\n",
+      "bias_lens--b2                            1.6509604E+00  1.1342872E-01  1.5304135E+00  1.7563082E+00  two    1.4405876E+00  1.8815129E+00  two    1.3942097E+00  1.9736097E+00  two     b^{[2]}\n",
+      "bias_lens--b3                            1.8657013E+00  1.1426556E-01  1.7488835E+00  1.9816417E+00  two    1.6469707E+00  2.0872145E+00  two    1.5857604E+00  2.1598610E+00  two     b^{[3]}\n",
+      "bias_lens--b4                            1.7645490E+00  1.0604019E-01  1.6597628E+00  1.8694066E+00  two    1.5621840E+00  1.9789315E+00  two    1.4941734E+00  2.0503159E+00  two     b^{[4]}\n",
+      "intrinsic_alignment_parameters--a1       2.1629137E-01  9.2261141E-02  1.1697196E-01  2.9905966E-01  two    4.0900772E-02  4.0417591E-01  two    4.6903616E-03  4.7619707E-01  two     A_1^{\\rm TATT}\n",
+      "intrinsic_alignment_parameters--alpha1  -1.2815201E+00  2.2920180E+00 -4.4833566E+00  4.9479373E-02  two   -5.0000000E+00  3.1673291E+00  >     -5.0000000E+00  5.0000000E+00  none    \\alpha_1^{\\rm TATT}\n",
+      "COSMOLOGICAL_PARAMETERS--SIGMA_8         7.4679991E-01  4.6229435E-02  6.9737607E-01  7.8911559E-01  two    6.6294727E-01  8.4250345E-01  two    6.3617210E-01  8.7212395E-01  two     \\sigma_8\n",
+      "cosmological_parameters--sigma_8         7.4679991E-01  4.6229435E-02  6.9737607E-01  7.8911559E-01  two    6.6294727E-01  8.4250345E-01  two    6.3617210E-01  8.7212395E-01  two     \\sigma_8\n",
+      "DATA_VECTOR--2PT_CHI2                    5.2718104E+02  6.3480622E+00  5.2021118E+02  5.3262355E+02  two    5.1530481E+02  5.3996599E+02  two    5.1338768E+02  5.4613868E+02  two     DATA_VECTOR--2PT_CHI2\n",
+      "data_vector--2pt_chi2                    5.2718104E+02  6.3480622E+00  5.2021118E+02  5.3262355E+02  two    5.1530481E+02  5.3996599E+02  two    5.1338768E+02  5.4613868E+02  two     data_vector--2pt_chi2\n",
+      "LIKELIHOODS--2PT_LIKE                    5.7746767E+03  3.1740311E+00  5.7719555E+03  5.7781617E+03  two    5.7682842E+03  5.7806148E+03  two    5.7651979E+03  5.7815734E+03  two     LIKELIHOODS--2PT_LIKE\n",
+      "likelihoods--2pt_like                    5.7746767E+03  3.1740311E+00  5.7719555E+03  5.7781617E+03  two    5.7682842E+03  5.7806148E+03  two    5.7651979E+03  5.7815734E+03  two     likelihoods--2pt_like\n",
+      "prior                                    6.4723384E+01  2.9368997E+00  6.2300924E+01  6.7950141E+01  two    5.8839410E+01  7.0163495E+01  two    5.5545253E+01  7.0775542E+01  two     prior\n",
+      "like                                     5.7746767E+03  3.1740311E+00  5.7719555E+03  5.7781617E+03  two    5.7682842E+03  5.7806148E+03  two    5.7651979E+03  5.7815734E+03  two     like\n",
+      "post                                     5.8394001E+03  3.5455262E+00  5.8364614E+03  5.8433547E+03  two    5.8321955E+03  5.8459313E+03  two    5.8286407E+03  5.8469420E+03  two     post\n",
+      "weight                                   1.7298621E-04  6.8830418E-05  1.2718517E-04  2.6205670E-04  two    3.0066730E-05  2.7865236E-04  two   -1.1403431E-06  2.9487435E-04  two     weight\n",
+      "S8*                                      7.8294631E-01  1.8111629E-02  7.6421348E-01  8.0031943E-01  two    7.4849652E-01  8.1892884E-01  two    7.3884397E-01  8.3137539E-01  two     S_8\n",
+      "asx1.e9*                                 1.9344010E+00  2.8400244E-01  1.6124458E+00  2.1641042E+00  two    1.4202984E+00  2.5064399E+00  two    1.3083956E+00  2.7630774E+00  two     10^9A_s \n",
+      "cosmological_parameters--ommh2*          1.5295807E-01  2.6801823E-02  1.2048455E-01  1.7428052E-01  two    1.0721336E-01  2.0700327E-01  two    1.0207818E-01  2.2018615E-01  two     $\\Omega_m h^2$\n",
+      "cosmological_parameters--ombh2*          2.1394989E-02  7.4958621E-03  1.1822725E-02  2.6717934E-02  two    9.6206992E-03  3.7287213E-02  two    1.0088868E-02  4.0000000E-02  <       $\\Omega_b h^2$\n",
+      "cosmological_parameters--omch2*          1.3091889E-01  2.0347651E-02  1.0697524E-01  1.4796824E-01  two    9.5025308E-02  1.7177816E-01  two    9.0309760E-02  1.8321285E-01  two     $\\Omega_c h^2$\n",
+      "cosmological_parameters--omega_c*        2.8569595E-01  3.0752745E-02  2.5195370E-01  3.1337716E-01  two    2.2993850E-01  3.4906968E-01  two    2.1725816E-01  3.6960305E-01  two     $\\Omega_c$\n",
+      "summnu*                                  3.7350713E-01  1.5414316E-01  2.9784268E-01  5.9982160E-01  <      5.5884000E-02  5.9982160E-01  none   5.5884000E-02  5.9982160E-01  none    \\sum m_{{\\nu}}\\,[{{\\rm eV}}]\n",
+      "bias_lens--b1e_sig8_bin1*                1.0880267E+00  3.7889306E-02  1.0503193E+00  1.1259523E+00  two    1.0169376E+00  1.1635707E+00  two    9.9432493E-01  1.1959105E+00  two     $b_1^{[1]}\\sigma_8$\n",
+      "bias_lens--b1e_bin1*                     1.4619485E+00  9.5714794E-02  1.3665356E+00  1.5564331E+00  two    1.2801449E+00  1.6552447E+00  two    1.2331131E+00  1.7204647E+00  two     $b_1^{[1]}$\n",
+      "bias_lens--b1e_sig8_bin2*                1.2289555E+00  5.5679902E-02  1.1719418E+00  1.2801928E+00  two    1.1227219E+00  1.3452574E+00  two    1.0897478E+00  1.3973498E+00  two     $b_1^{[2]}\\sigma_8$\n",
+      "bias_lens--b1e_bin2*                     1.6509604E+00  1.1342872E-01  1.5304135E+00  1.7563082E+00  two    1.4405876E+00  1.8815129E+00  two    1.3942097E+00  1.9736097E+00  two     $b_1^{[2]}$\n",
+      "bias_lens--b1e_sig8_bin3*                1.3887772E+00  4.5379711E-02  1.3436446E+00  1.4344094E+00  two    1.3005484E+00  1.4785632E+00  two    1.2723667E+00  1.5033494E+00  two     $b_1^{[3]}\\sigma_8$\n",
+      "bias_lens--b1e_bin3*                     1.8657013E+00  1.1426556E-01  1.7488835E+00  1.9816417E+00  two    1.6469707E+00  2.0872145E+00  two    1.5857604E+00  2.1598610E+00  two     $b_1^{[3]}$\n",
+      "bias_lens--b1e_sig8_bin4*                1.3135738E+00  4.2852534E-02  1.2704749E+00  1.3553746E+00  two    1.2306102E+00  1.3983123E+00  two    1.2056922E+00  1.4304394E+00  two     $b_1^{[4]}\\sigma_8$\n",
+      "bias_lens--b1e_bin4*                     1.7645490E+00  1.0604019E-01  1.6597628E+00  1.8694066E+00  two    1.5621840E+00  1.9789315E+00  two    1.4941734E+00  2.0503159E+00  two     $b_1^{[4]}$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_chain.getMargeStats())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "5b2ece22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\Omega_{\\rm m} = 0.332^{+0.028}_{-0.033}\n",
+      "h = 0.679^{+0.055}_{-0.10}\n",
+      "\\Omega_b = 0.0451^{+0.0057}_{-0.014}\n",
+      "$\\Omega_m h^2$ = 0.153^{+0.021}_{-0.032}\n",
+      "$\\Omega_b h^2$ = 0.0214^{+0.0053}_{-0.0096}\n",
+      "\\sum m_{{\\nu}}\\,[{{\\rm eV}}] > 0.298\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_chain.getLatex(param[0]))\n",
+    "print(test_chain.getLatex(param[1]))\n",
+    "print(test_chain.getLatex(param[2]))\n",
+    "print(test_chain.getLatex(param[3]))\n",
+    "print(test_chain.getLatex(param[4]))\n",
+    "print(test_chain.getLatex(param[5]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d17cff",
+   "id": "5cbcd7fb",
    "metadata": {},
    "outputs": [],
    "source": []
